fix gap snaks media min 523

--- a/blocks/snacks/snacks.css
+++ b/blocks/snacks/snacks.css
@@ -25,11 +25,13 @@
 @media (max-width: 523px) {
   .snacks {
     grid-template-columns: repeat(1, 400px);
+    gap: 10px;
   }
 }
 
 @media (max-width: 421px) {
   .snacks {
     grid-template-columns: repeat(1, 300px);
+    gap: 2px;
   }
 }
